MB-41742: Remove win32/strings.h

win32/strings.h was added to implement strcasecmp() from POSIX.1
<strings.h> which is not avilable on Windows.

However, when implementing aligned new support using jemalloc,
win32/strings.h conflicts with jemalloc's version of strings.h which
it includes for Windows to provide definitions of ffs() family of
functions. When compiling parts of platform which use jemalloc, the
"wrong" strings.h can be included and hence we see errors such as:

    ..\platform\src\je_arena_malloc.cc(266): C3861: 'ffs': identifier not found

Given platform's strings.h just contains strcasecmp, remove our
strings.h and use Folly's portability/String.h header where needed,
which has the advantage of the file being named differently so doesn't
collide with jemalloc's.

Change-Id: I09f3172a7d882c8ff91e91f604f090efaf1aca59
Reviewed-on: http://review.couchbase.org/c/platform/+/142111
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Richard de Mellow <richard.demellow@couchbase.com>
Reviewed-by: Trond Norbye <trond.norbye@couchbase.com>