src/backtrace.c
@@ -16,7 +16,6 @@
  */
 #include <inttypes.h>
 #include <platform/backtrace.h>
-#include <strings.h>
 
 #if defined(WIN32) && defined(HAVE_BACKTRACE_SUPPORT)
 #define WIN32_LEAN_AND_MEAN
